# gesamtergebnis-etappenrennen

./: .gitmodules  README.md  gesamtergebnis.php
01_Data/ingest/: Ergebnis Magstadt 19.06.2022.xlsx  Ergebnis Plattenhardt 16.06.2022.xlsx  Ergebnis Vaihingen 18.06.2022.xlsx  Ergebnis Waldau 17.06.2022.xlsx  Punkte_template_filled.xlsx
01_Data/results/: team.xlsx
01_Data/setup/: Punktewertung Elite Amateure Nachwuchs Endversion.xlsx  participants-14_06_2022.csv
02_Tool/: config.yaml  gen_point_template_excel.py  main_ingest.py  requirements.txt
02_Tool/racedaystools/: __init__.py  startlists.py
lib/RaceDaysResults-php/01_Data/results/: gesamt.xlsx  punkte.xlsx
lib/RaceDaysResults-php/01_Data/setup/: participants-database-15--Juni-2022-2.csv
lib/RaceDaysResults-php/02_Tool/: README.md  gen_participats.py  make_resultsfiles.py  pyproject.toml  querie.sql
lib/RaceDaysResults-php/02_Tool/racedaystools/: race_results.py  score_file.py  utils.py
